__zchsh/terraform/gateways.tf
// routes traffic from the internet to our VPC
resource "aws_internet_gateway" "test-env-gw" {
  vpc_id = aws_vpc.test-env.id

  tags = {
    Name = "test-env-gw"
  }
}
